--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"chalk": "^5.2.0",
 		"eslint-config-xo-react": "^0.27.0",
 		"eslint-plugin-react": "^7.32.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-hooks": "^6.0.0",
 		"import-jsx": "^5.0.0",
 		"ink-testing-library": "^3.0.0",
 		"prettier": "^2.8.7",
@@ -53,7 +53,7 @@
 	"prettier": "@vdemedes/prettier-config",
 	"babel": {
 		"presets": [
-			"@babel/preset-react"
+			["@babel/preset-react", { "runtime": "automatic" }]
 		]
 	}
 }
