--- a/api/package.json
+++ b/api/package.json
@@ -5,11 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "node --watch index.js"
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "express": ">=4.21.1",
     "@google/generative-ai": "0.24.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.0"
   },
   "engines": {
     "node": ">=16.0.0"
