--- a/api/package.json
+++ b/api/package.json
@@ -8,13 +8,13 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "express": ">=4.21.1",
+    "express": "^4.21.1",
     "@google/generative-ai": "0.24.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   }
 }
