--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"dist"
 	],
 	"dependencies": {
+		"dotenv": "^17.2.3",
 		"ink": "^6.5.1",
 		"ink-text-input": "^6.0.0",
 		"meow": "^11.0.0",
