--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "express": "^4.21.1",
-    "@google/generative-ai": "0.24.1"
+    "@google/generative-ai": "0.24.1",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
